syntax = "proto3";

package stage;

import "../tasks/task.proto";

service StageService {
  rpc GetAllProjectStages (ProjectIdRequest) returns (StagesResponse);
}

enum Progress {
  TODO = 0;
  DOING = 1;
  DONE = 2;
}

message Stage {
  int32 id = 1;
  Progress progress = 2;
  string createdAt = 3;
  int32 projectId = 4;
  repeated TaskResponse tasks = 5;
}

message ProjectIdRequest {
  int32 projectId = 1;
}

message StagesResponse {
  repeated Stage stages = 1;
}
